--- a/MapConfigure/MainWindow.xaml
+++ b/MapConfigure/MainWindow.xaml
@@ -79,6 +79,12 @@
       CommandParameter="{Binding ElementName=MapControl}"
       Back="#00adc1" Width="30" Height="30" Kind="CrosshairsGps"
       HorizontalAlignment="Right" Margin="0,0,20,70" VerticalAlignment="Bottom"/>
+    <c:CButton x:Name="ShowHiddenRoutesBtn"
+               IsEnabled="{Binding CanHideRoutes}"
+               Command="{Binding ShowHiddenRoutesCommand}"
+               CommandParameter="{Binding ElementName=MapControl}"
+               Back="#00adc1" Width="30" Height="30" Kind="EyePlus"
+               HorizontalAlignment="Right" Margin="0,0,70,20" VerticalAlignment="Bottom"/>
     <c:MainMenu
       d:IsHidden="True"
       x:Name="MainMenuControl"
