--- a/MapConfigure/MainWindow.xaml
+++ b/MapConfigure/MainWindow.xaml
@@ -46,9 +46,6 @@
             Style="{DynamicResource MaterialDesignLabel}">
             Добавить город/пункт
           </Label>
-          <!--<Label
-            Style="{DynamicResource MaterialDesignLabel}" MinWidth="20"
-            Content="{Binding ChosenPoint,Converter={StaticResource LatLngToText}}"/>-->
           <TextBox
             MinWidth="20" IsReadOnly="True" BorderBrush="{x:Null}" BorderThickness="0"
             Text="{Binding ChosenPoint,Converter={StaticResource LatLngToText}}"
@@ -75,7 +72,7 @@
       </md:DialogHost.DialogContent>
     </md:DialogHost>
     <c:CButton x:Name="x"
-      Command="{Binding GoToKz}"
+      Command="{Binding GoToKz}" ToolTip="Центрировать Казахстан"
       CommandParameter="{Binding ElementName=MapControl}"
       Back="#00adc1" Width="30" Height="30" Kind="CrosshairsGps"
       HorizontalAlignment="Right" Margin="0,0,20,70" VerticalAlignment="Bottom"/>
@@ -84,14 +81,24 @@
                Command="{Binding ShowHiddenRoutesCommand}"
                CommandParameter="{Binding ElementName=MapControl}"
                Back="#00adc1" Width="30" Height="30" Kind="EyePlus"
-               HorizontalAlignment="Right" Margin="0,0,70,20" VerticalAlignment="Bottom"/>
+               HorizontalAlignment="Right" Margin="0,0,70,20" VerticalAlignment="Bottom">
+      <c:CButton.ToolTip>
+        <ToolTip
+          Content="{Binding HiddenRoutes}" ContentStringFormat="{}Показать {0} скрытых дорог" />
+      </c:CButton.ToolTip>
+    </c:CButton>
+    <Label
+      Width="30" Height="30" HorizontalAlignment="Right" Margin="0,0,70,20"
+      VerticalAlignment="Bottom" FontSize="8" HorizontalContentAlignment="Right" Foreground="White"
+      VerticalContentAlignment="Bottom" IsHitTestVisible="False" Content="{Binding HiddenRoutes}"
+      Visibility="{Binding CanHideRoutes,Converter={StaticResource BoolToVisConv}}"/>
     <c:MainMenu
       d:IsHidden="True"
       x:Name="MainMenuControl"
       Visibility="{Binding IsOpen,Converter={StaticResource BoolToVisConv}}">
     </c:MainMenu>
     <c:CButton x:Name="SettingsOpenBtn"
-      Command="{Binding ToggleCommand}"
+      Command="{Binding ToggleCommand}" ToolTip="Показать настройки"
       Visibility="{Binding IsClosed,Converter={StaticResource BoolToVisConv}}"
       CommandParameter="{StaticResource true}"
       HorizontalAlignment="Right" Margin="0,0,10,10" VerticalAlignment="Bottom"
